<resources>

    <!-- Titelanzeigen -->
    <string name="app_name">Sprachmeister</string>
    <string name="title_activity_unit">@string/app_name</string>
    <string name="title_activity_entry_add">@string/app_name</string>

    <!-- WelcomeActivity -->
    <string name="welcome_enter_your_name_tv_title">Gib deinen Namen ein.</string>

    <!-- Labels für den Listview Details -->
    <string name="listview_unitname">Anmerkungen: </string>
    <string name="listview_username">Benutzername: </string>
    <string name="listview_unitId">Erstellungsdatum: </string>
    <string name="listview_title">Titel: </string>

    <!-- UnitAddActivity -->
    <string name="add_unit_tv_title">Lektion hinzufügen</string>
    <string name="add_unit_btn_label">Hinzufügen</string>

    <!-- Unit Add Activity -->
    <string name="add_unit_tv_unit_title">Lektionstitel</string>
    <string name="add_unit_et_unit_title_hint">Lektionsname</string>
    <string name="add_unit_et_unit_desctiption_hint">Zusatzinformation: Bspl. Seite im Buch oder Beschreibung</string>

    <!-- UnitEditActivity -->
    <string name="edit_unit_tv_title">Lektion bearbeiten</string>
    <string name="edit_unit_btn_save_label">Speichern</string>

    <!-- Delete Unit Dialog -->
    <string name="delete_unit_dialog_yes">Ja, löschen</string>
    <string name="delete_unit_dialog_no">Nein</string>
    <string name="delete_unit_title_text">Löschen von Lektion ?</string>

    <!-- Bottom Menu -->
    <string name="title_activity_unit_list_bottom_menu">UnitListBottomMenuActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="navigation_first_title">Üben</string>
    <string name="navigation_second_title">Löschen</string>
    <string name="navigation_third_title">Details</string>
    <string name="navigation_forth_title">Bearbeiten</string>

    <string name="button_text_back">Zurück</string>
    <string name="button_text_save">Speichern</string>

    <!-- Popup menues -->
    <string name="list_unit_popup_menu_practice">Üben</string>
    <string name="list_unit_popup_menu_details">Details</string>
    <string name="list_unit_popup_menu_process">Bearbeiten</string>
    <string name="list_unit_popup_menu_delete">Löschen</string>


    <string name="list_voc_popup_menu_add">Hinzufügen</string>
    <string name="list_voc_popup_menu_details">Details</string>
    <string name="list_voc_popup_menu_process">Bearbeiten</string>
    <string name="list_voc_popup_menu_delete">Löschen</string>


    <!-- Add Voc Form -->
    <string name="add_voc_tv_title">Vokabel hinzufügen</string>
    <string name="add_voc_et_native_hint">Bedeutung in deiner Sprache</string>
    <string name="add_voc_et_foreign_hint">Bedeutung in Fremdsprache</string>
    <string name="add_voc_et_description_hint">Weitere Angaben wie Beispielsätze oder Steigerungsformen der Adjaktive</string>
    <string name="add_voc_et_unit_hint">Lektionstitel</string>
    <string name="add_voc_btn_back_label">Zurück</string>
    <string name="add_voc_btn_save_label">Speichern</string>


    <!-- Edit Voc Form -->
    <string name="edit_voc_tv_titel">Vokabel bearbeiten</string>
    <string name="edit_voc_btn_save_label">Speichern</string>


    <!-- Empty voc list entry -->
    <string name="no_entries_in_this_unit">Diese Liste ist leer.</string>
    <string name="click_to_add_data">Klicken: neuer Eintrag</string>


</resources>
