<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/list_unit_bg"


    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.khalessi.gretas_vokabeltrainer.VocAddActivity"
    tools:showIn="@layout/activity_add_voc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">


        <TextView
            android:id="@+id/tv_entry_add_vokabelBearbeiten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="@dimen/header_text_size"

            android:text="@string/add_voc_tv_title" />

        <EditText
            android:id="@+id/et_entry_add_vokabelMuttersprache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textNoSuggestions"
            android:hint="@string/add_voc_et_native_hint" />

        <EditText
            android:id="@+id/et_entry_add_vokabelFremdsprache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textNoSuggestions"
            android:hint="@string/add_voc_et_foreign_hint" />

        <EditText
            android:id="@+id/et_entry_add_vokabelZusatzinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine|textNoSuggestions"
            android:minLines="5"
            android:hint="@string/add_voc_et_description_hint" />

        <EditText
            android:id="@+id/et_entry_add_lektionstitel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textNoSuggestions"
            android:hint="@string/add_voc_et_unit_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal"

            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >

            <Button
                android:id="@+id/btn_addEntryCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"

                android:layout_marginRight="10sp"

                android:text="@string/add_voc_btn_back_label" />

            <Button
                android:id="@+id/btn_addEntrySubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"

                android:text="@string/add_voc_btn_save_label" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

